fix testimonials on mobile

--- a/src/assets/scss/pages/homepage.scss
+++ b/src/assets/scss/pages/homepage.scss
@@ -213,7 +213,7 @@ $homepage-background: #eaf8f3;
         margin-right: auto;
 
         @media screen and (max-width: $screen-xs) {
-            max-width: 50%;
+            max-width: 128px;
         }
     }
 
